feat: 에러코드 기반 예외처리 적용 및 기술스택 조회 기능 추가